# Rewiring-Collective-Action

./: .gitignore  License.md  README.md  convergence_plots_paper.py  convergence_plots_paper_v2.py  convergence_plots_paper_v3.py  convergence_rates_ALL_polarisingNode_f_5000_45000_all.pkl  environment.yaml  files.txt  general_parameter_sweep.py  generate_markdown_tree.py  heatmap_parameter_sweep.py  heatmap_plots.py  heatmap_plots_lilli.py  heatmap_sweep_sweep_20250328_1808_politicalClimate_gbh.csv  models.py  models_checks.py  network_analysis.py  nohup.out  plots.py  plots_paper.py  profile.json  requirements.txt  requirements_no_win.txt  rewiring_parameter_sweep.py  run.py  run_single.py  sweep_config_sweep_20250328_1808_politicalClimate_gbh.txt  tree.md
Analysis/: benchmarks_wtf_node2ve.py  convergance_rate_plots_average.py  convergence_plots_paper_v3.py  convergence_rate_plots_single.py  convergence_rate_tests.py  debug.txt  default_run_all.csv  edges.csv  embeddings.emb  example.pkl  final_states_node2vec_test.csv  general_param_sweep.py  general_parameter_sweep.py  general_parameter_sweep_dic.py  graph.edgelist  graph.edgelist_16500  graph.edgelist_5476  heatmap_parameter_sweep.py  heatmap_plots.py  heatmap_stats.py  minimal_trajec_heatmap.py  models_checks.py  models_checks_alt.py  models_checks_alt_new.py  models_checks_review.py  models_checks_updated.py  models_checks_updated_alt_stripped.py  models_checks_updated_before_cpp.py  new_wtf.prof  (+27 more)
Auxillary/fast_wtf/: Cargo.toml  DPAH.p  bench_rust_wtf_new.py  lib_no_grpah.rs  lib_working.rs  lib_working_quickest.rs
(+55 files in other folders)
